--- a/src/app/components/content-item/content-item.component.html
+++ b/src/app/components/content-item/content-item.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row">
+<div fxLayout="row" fxLayoutGap="10px" fxFill>
   <div fxFlex="40">
     <img [src]="content.img" [src.lt-md]="content.imgMobile">
   </div>
